Made calendar use calendar css

--- a/views/calendar/month_view.html
+++ b/views/calendar/month_view.html
@@ -5,7 +5,7 @@
 <h4><center>{{month_name}} {{year}}</center></h4>
 {% for year, months in years %}
 <center>
-<table cellpadding="10" cellspacing="3">
+<table cellpadding="10" cellspacing="3" class="calendar">
      <tr>
        <div class="year">
    {% for month in months %}
