Added permission checking to the gallery views, now won't offer links to users who don't have the proper permissions to add/update/delete things

--- a/views/gallery/gallery_add.html
+++ b/views/gallery/gallery_add.html
@@ -4,10 +4,16 @@
 {% block content %}
 <h3>Add Image Gallery</h3>
 
+{% if error %}
+  <br/>
+  <b>There was an error creating a gallery. Please make sure you fill out all fields and try again!</b>
+  <br/><br/>
+{% endif %}
 <form action="" method="post">
   {{gallery_form.as_p}}
   {% csrf_token %}
   <input type="submit" value="Create Gallery"/>
 </form>
+<br/>
 <a href="/gallery">Cancel</a>
 {% endblock %}
