--- a/views/forum/forums.html
+++ b/views/forum/forums.html
@@ -10,10 +10,10 @@
 {% endblock %}
 
 {% block content %}
-<table border="1" cellpadding="6">
-<th>
+<table border="1" cellpadding="6" class = "table">
+<th>Forum</th><th>Last Post</th><th></th>
 {% for forum in forums %}
-	<tr>
+	<tr class="{% cycle 'odd' "even" %}">
 	 <td><b><a href="/forum/{{group.id}}/{{forum.id}}">{{forum.forum_name}}</a></b><br />
 	  <p>{{forum.forum_description}}</p></td>
 	 <td>Last Post on <a href="/forum/{{group.id}}/{{forum.id}}/{{forum.LastPostThread.id}}">{{forum.LastPostDate}}</a><br />
