--- a/views/base.html
+++ b/views/base.html
@@ -14,11 +14,9 @@
 <div class="inner-container">
     <div class="header">
         <div class="title">
-            <span class="sitename">
-                {% block title %}
-                    <a href="/" class="header_image"><img src="/include/images/guspy.png"/></a>
-                {% endblock %}</td>
-            </span>
+            {% block title %}
+                <a href="/"><img src="/include/images/guspy.png"/></a>
+            {% endblock %}</td>
             <div class="slogan">{% block subtitle %}Groups in a University Setting{% endblock %}</div>
         </div>
     </div>
