added better authentication for members

--- a/media/css/default.css
+++ b/media/css/default.css
@@ -148,6 +148,66 @@ h1,h2,h3 {padding-top: 6px; color: #553; margin-bottom: 4px;}
 	padding: 8px 12px 0 0;
 }
 
+/* calendar table */
+.calendar
+{
+  font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;
+  font-size: 12px;
+  margin: 45px;
+  width: 500px;
+  text-align: left;
+  border-collapse: collapse;
+  border-bottom: 1px solid #ced9fe;
+  
+}
+.calendar th
+{
+  font-size: 13px;
+  font-weight: normal;
+  padding: 8px;
+  background: #b9c9fe;
+  border-top: 4px solid #aabcfe;
+  border-bottom: 1px solid #fff;
+  color: #039;
+}
+
+.month
+{
+  font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;
+  font-size: 12px;
+  margin: 45px;
+  text-align: left;
+  border-collapse: collapse;
+}
+
+.month tr td
+{
+  padding: 8px;
+  background: #e8edff;
+  border-bottom: 1px solid #ced9fe;
+  color: #669;
+  border-top: 1px solid transparent;
+}
+.month tr.odd td
+{
+  padding: 8px;
+  background: #ccddff;
+  border-bottom: 1px solid #fff;
+  color: #669;
+  border-top: 1px solid transparent;
+}
+.calendar td:hover td
+{
+  background: #2E8B57;
+  color: #339;
+}
+.calendar td.odd:hover td
+{
+  background: #2E8B57;
+  color: #339;
+}
+
+
 /* tables */
 table
 {
@@ -193,53 +253,6 @@ table td:hover td
 table td.odd:hover td
 {
 	background: #ccdddd;
-	color: #339;
-}
-/* calendar table */
-.calendar
-{
-	font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;
-	font-size: 12px;
-	margin: 45px;
-	width: 480px;
-	text-align: left;
-	border-collapse: collapse;
-	border-bottom: 2px solid #000000
-}
-.calendar th
-{
-	font-size: 13px;
-	font-weight: normal;
-	padding: 8px;
-	background: #b9c9fe;
-	border-top: 4px solid #aabcfe;
-	border-bottom: 1px solid #fff;
-	color: #039;
-}
-.calendar tr td
-{
-	padding: 8px;
-	background: #e8edff;
-	border-bottom: 1px solid #fff;
-	color: #669;
-	border-top: 1px solid transparent;
-}
-.calendar tr.odd td
-{
-	padding: 8px;
-	background: #ccddff;
-	border-bottom: 1px solid #fff;
-	color: #669;
-	border-top: 1px solid transparent;
-}
-.calendar td:hover td
-{
-	background: #2E8B57;
-	color: #339;
-}
-.calendar td.odd:hover td
-{
-	background: #2E8B57;
 	color: #339;
 }
 
