--- a/views/users/info.html
+++ b/views/users/info.html
@@ -7,7 +7,7 @@ Your Groups
 {% if  user.is_anonymous %}
 <h1>You Are Not Logged In!!!</h1>
 {% else %}
-<h1>Welcome {{ user}},</h1>
+<h1>Welcome {{ user}}.</h1>
 You Are Logged In!<br/>
 <a href='/logout/'>Logout</a>
 {% endif %}
