Fixed emailer templates, added emailer checkbox support, added better error messages, standardized sidebar

--- a/views/email/check.html
+++ b/views/email/check.html
@@ -1,5 +1,5 @@
 {% extends "email/emailer.html" %}
-{% block pagetitle %}Email{% endblock pagetitle %}
+{% block pagetitle %}Message Inbox{% endblock pagetitle %}
 
 {% block content %}
 <h1> Inbox for {{ username }} ({{ useremail }})</h1>
