Added sent messages view

--- a/views/email/check_message.html
+++ b/views/email/check_message.html
@@ -2,7 +2,26 @@
 {% block pagetitle %}Message: {{ email.subject }}{% endblock pagetitle %}
 
 {% block content %}
-<b>From:</b></br> {{ email.from_email|urlize }}<br/><hr>
+<h3>To:</h3>
+{% for address in email.to %}
+	{{ address|urlize }}
+{% endfor %}
+
+{% if email.bcc %}
+	{% for address in email.bcc %}
+		{{ address|urlize }}
+	{% endfor %}
+{% endif %}
+<br/><hr>
+{% if email.cc %}
+<h3>CC:</h3>
+{% for address in email.cc %}
+	{{ address|urlize }}
+{% endfor %}
+<br/><hr>
+{% endif %}
+
+<h3>From:</h3> {{ email.from_email|urlize }}<br/><hr>
 <h2>{{ email.subject|urlize }} </h2>
 {{ email.body|urlize|linebreaks }}
 <hr>
