--- a/views/email/emailer.html
+++ b/views/email/emailer.html
@@ -6,6 +6,7 @@
 <h2>Messages</h2>
 <ul>
 	<li><a href="/email/check">Inbox</a></li>
+	<li><a href="/email/check_sent">Sent Messages</a></li>
 	<li><a href="/email/send">New Message</a></li>
 </ul>
 {% endblock %}
