Updated the public image gallery view to handle no image galleries being flagged as public

--- a/views/gallery/public_list.html
+++ b/views/gallery/public_list.html
@@ -5,6 +5,11 @@
 <h3>Public Image Galleries</h3>
 <br/>
 
+{% if galleries == None %}
+  <i>There are currently no public image galleries available. Once a group
+  decides to make an image gallery public, it will appear on this page.</i>
+{% endif %}
+
 <!-- Print a list of the public image galleries -->
 {% for g in galleries %}
   <a href="/gallery/{{ g.pk }}">{{ g.name }}</a>
