Some Forum Updates and Fixes.

--- a/views/forum/delete_forum.html
+++ b/views/forum/delete_forum.html
@@ -10,4 +10,9 @@
 {% endblock %}
 
 {% block content %}
+<p>
+Deleting: {{forum.forum_name}}
+Are you sure you want to delete this forum?
+</p>
+<!--Yes--><!--No-->
 {% endblock content %}
