--- a/views/forum/delete_thread.html
+++ b/views/forum/delete_thread.html
@@ -11,4 +11,9 @@
 {% endblock %}
 
 {% block content %}
+<p>
+Deleting: {{thread.thread_name}}
+Are you sure you want to delete this thread?
+</p>
+<!--Yes--><!--No-->
 {% endblock content %}
