--- a/views/forum/posts.html
+++ b/views/forum/posts.html
@@ -12,11 +12,11 @@
 {% endblock %}
 
 {% block content %}
-<table border="1" cellpadding="6" class="table">
+<table border="1" cellpadding="6" class="table" width="95%">
 {% for post in posts %}
-	<tr class="{% cycle 'odd' "even" %}">
+	<tr>
 	 <th><b><a href="">{{post.user.username|capfirst}}</a></th>
-	 <th colspan="2"></b>{{post.date_created}}</th>
+	 <th colspan="2" align="right"></b>{{post.date_created}}</th>
 	</tr>
 	<tr colspan="3">
 	 <td colspan="3">{{post.post_text}}</td>
