--- a/views/forum/threads.html
+++ b/views/forum/threads.html
@@ -11,16 +11,15 @@
 {% endblock %}
 
 {% block content %}
-<table border="1" cellpadding="6" class="table">
-<th>Thread Name</th><th>Last Post</th><th></th>
+<table border="1" cellpadding="6" class="table" width="95%">
+<th>Thread Name</th><th align="right">Last Post</th><th></th>
 {% for thread in threads %}
 	<tr class="{% cycle 'odd' "even" %}">
-	<tr>
 	 <td><b><a href="/forum/{{group.id}}/{{forum.id}}/{{thread.id}}">{{thread.thread_name}}</a></b><br />
 	  by <a href="">{{thread.user.username|capfirst}}</td> 
-	 <td>Last Post on <a href="/forum/{{group.id}}/{{forum.id}}/{{thread.LastPostThread.id}}">{{thread.LastPostDate}}</a><br />
+	 <td align="right">Last Post on <a href="/forum/{{group.id}}/{{forum.id}}/{{thread.LastPostThread.id}}">{{thread.LastPostDate}}</a><br />
 	  by <a href="">{{thread.LastPostUser.username|capfirst}}</a></td>
-	 <td> <a href="/forum/{{group.id}}/{{forum.id}}/{{thread.id}}/delete_thread">Delete Thread</a>
+	 <td align="right"> <a href="/forum/{{group.id}}/{{forum.id}}/{{thread.id}}/delete_thread">Delete Thread</a>
 	</tr>
 {% endfor %}
 </table>
