almost displays menu of groups

--- a/views/calendar/month_view.html
+++ b/views/calendar/month_view.html
@@ -33,7 +33,7 @@
   <center>
     <table border="1" bordercolor="#ced9fe"class="month">
 
-    <tr height="50" width="25%">
+    <tr align="center">
         <th>Monday</th>
         <th>Tuesday</th>
         <th>Wednesday</th>
