--- a/views/forum/add_forum.html
+++ b/views/forum/add_forum.html
@@ -5,8 +5,11 @@
 {% endblock pagetitle %}
 
 {% block sidebar_top %}
-<a href="/group/{{group.id}}">Return to Group</a><br />
-<a href="/forum/{{group.id}}">Return to Forums</a> <br />
+<h2>Forum Options</h2>
+<ul>
+ <li><a href="/groups/{{group.id}}">Return to Group Page</a></li>
+ <li><a href="/forum/{{group.id}}">Return to Forums</a></li>
+</ul>
 {% endblock %}
 
 {% block content %}
