--- a/views/forum/add_thread.html
+++ b/views/forum/add_thread.html
@@ -5,9 +5,12 @@
 {% endblock pagetitle %}
 
 {% block sidebar_top %}
-<a href="/group/{{group.id}}">Return to Group</a><br />
-<a href="/forum/{{group.id}}">Return to Forums</a><br />
-<a href="/forum/{{group.id}}/{{forum.id}}">Return to Threads</a><br />
+<h2>Forum Options</h2>
+<ul>
+ <li><a href="/groups/{{group.id}}">Return to Group Page</a></li>
+ <li><a href="/forum/{{group.id}}">Return to Forums</a></li>
+ <li><a href="/forum/{{group.id}}/{{forum.id}}">Return to Threads</a></li>
+</ul>
 {% endblock %}
 
 {% block content %}
