--- a/views/forum/delete_forum.html
+++ b/views/forum/delete_forum.html
@@ -5,14 +5,20 @@
 {% endblock pagetitle %}
 
 {% block sidebar_top %}
-<a href="/group/{{group.id}}">Return to Group</a><br />
-<a href="/forum/{{group.id}}">Return to Forums</a> <br />
+<h2>Forum Options</h2>
+<ul>
+ <li><a href="/groups/{{group.id}}">Return to Group Page</a></li>
+ <li><a href="/forum/{{group.id}}">Return to Forums</a></li>
+</ul>
 {% endblock %}
 
 {% block content %}
 <p>
-Deleting: {{forum.forum_name}}
+<b>Deleting: {{forum.forum_name}}</b>
 Are you sure you want to delete this forum?
 </p>
-<!--Yes--><!--No-->
+<form action="" method="POST">
+ {% csrf_token %}
+ <input type="submit" value="Delete"/> <input type="submit" value="Cancel"/>
+</form>
 {% endblock content %}
