--- a/views/forum/delete_post.html
+++ b/views/forum/delete_post.html
@@ -5,15 +5,18 @@
 {% endblock pagetitle %}
 
 {% block sidebar_top %}
-<a href="/group/{{group.id}}">Return to Group</a><br />
-<a href="/forum/{{group.id}}">Return to Forums</a><br />
-<a href="/forum/{{group.id}}/{{forum.id}}">Return to Threads</a><br />
-<a href="/forum/{{group.id}}/{{forum.id}}/{{thread.id}}">Return to Posts</a><br />
+<h2>Forum Options</h2>
+<ul>
+ <li><a href="/groups/{{group.id}}">Return to Group Page</a></li>
+ <li><a href="/forum/{{group.id}}">Return to Forums</a></li>
+ <li><a href="/forum/{{group.id}}/{{forum.id}}">Return to Threads</a></li>
+ <li><a href="/forum/{{group.id}}/{{forum.id}}/{{thread.id}}">Return to Posts</a></li>
+</ul>
 {% endblock %}
 
 {% block content %}
 <p>
-Warning! This will overwrite the old post.
+Warning! This will overwrite the old post. Please give a reason below.
 </p>
  <form method="POST">
   {%csrf_token%}
