--- a/views/forum/posts.html
+++ b/views/forum/posts.html
@@ -5,17 +5,20 @@
 {% endblock pagetitle %}
 
 {% block sidebar_top %}
-<a href="/group/{{group.id}}">Return to Group</a><br />
-<a href="/forum/{{group.id}}">Return to Forums</a><br />
-<a href="/forum/{{group.id}}/{{forum.id}}">Return to Threads</a><br />
-<a href="/forum/{{group.id}}/{{forum.id}}/{{thread.id}}/add_post">Post Reply</a>
+<h2>Forum Options</h2>
+<ul>
+ <li><a href="/groups/{{group.id}}">Return to Group Page</a></li>
+ <li><a href="/forum/{{group.id}}">Return to Forums</a></li>
+ <li><a href="/forum/{{group.id}}/{{forum.id}}">Return to Threads</a></li>
+ <li><a href="/forum/{{group.id}}/{{forum.id}}/{{thread.id}}/add_post">Post Reply</a></li>
+</ul>
 {% endblock %}
 
 {% block content %}
 <table border="1" cellpadding="6" class="table" width="95%">
 {% for post in posts %}
 	<tr>
-	 <th><b><a href="">{{post.user.username|capfirst}}</a></th>
+	 <th><b><a href="/users/profile">{{post.user.username|capfirst}}</a></th>
 	 <th colspan="2" align="right"></b>{{post.date_created}}</th>
 	</tr>
 	<tr colspan="3">
