--- a/views/forum/threads.html
+++ b/views/forum/threads.html
@@ -5,9 +5,12 @@
 {% endblock pagetitle %}
 
 {% block sidebar_top %}
-<a href="/group/{{group.id}}">Return to Group</a><br />
-<a href="/forum/{{group.id}}">Return to Forums</a> <br />
-<a href="/forum/{{group.id}}/{{forum.id}}/add_thread">New Thread</a>
+<h2>Forum Options</h2>
+<ul>
+ <li><a href="/groups/{{group.id}}">Return to Group Page</a></li>
+ <li><a href="/forum/{{group.id}}">Return to Forums</a></li>
+ <li><a href="/forum/{{group.id}}/{{forum.id}}/add_thread">New Thread</a></li>
+ </ul>
 {% endblock %}
 
 {% block content %}
@@ -16,9 +19,9 @@
 {% for thread in threads %}
 	<tr class="{% cycle 'odd' "even" %}">
 	 <td><b><a href="/forum/{{group.id}}/{{forum.id}}/{{thread.id}}">{{thread.thread_name}}</a></b><br />
-	  by <a href="">{{thread.user.username|capfirst}}</td> 
-	 <td align="right">Last Post on <a href="/forum/{{group.id}}/{{forum.id}}/{{thread.LastPostThread.id}}">{{thread.LastPostDate}}</a><br />
-	  by <a href="">{{thread.LastPostUser.username|capfirst}}</a></td>
+	  by <a href="/users/profile">{{thread.user.username|capfirst}}</td> 
+	 <td align="right">Last Post on <a href="/forum/{{group.id}}/{{forum.id}}/{{thread.id}}">{{thread.LastPostDate}}</a><br />
+	  by <a href="/users/profile">{{thread.LastPostUser.username|capfirst}}</a></td>
 	 <td align="right"> <a href="/forum/{{group.id}}/{{forum.id}}/{{thread.id}}/delete_thread">Delete Thread</a>
 	</tr>
 {% endfor %}
