--- a/views/calendar/view_events.html
+++ b/views/calendar/view_events.html
@@ -1,7 +1,8 @@
 {% extends "base.html" %}
 {% block content %}
 <h4>Events on {{month_name}} {{day}}, {{year}}</h4>
-{% for event in events %}
+{% for events in total_day_events %}
+  {% for event in events %}
 
 
 <h3>Event: {{event.event_name}} </h3>
@@ -12,15 +13,19 @@
 <b>Description:</b> {{event.description}}
 <br>
 <br>
-
+{% for group in auth_groups %}
+  {% if event.Group == group %}
 <input type="button" 
 value="Edit" 
 onclick="location.href='/calendar/{{year}}/{{month_name}}/_edit{{day}}/{{event.pk}}/'">
+{% endif %}
+{% endfor %}
+
 
 <br>
 <br>
 <br>
-
+{% endfor %}
 {% endfor %}
 {% endblock content %}
 
