Added sidebar information to the gallery views

--- a/views/gallery/gallery_add.html
+++ b/views/gallery/gallery_add.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "gallery/base.html" %}
 {% block pagetitle %}Add Image Gallery{% endblock %}
 
 {% block content %}
