--- a/views/gallery/gallery_group_list.html
+++ b/views/gallery/gallery_group_list.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "gallery/base.html" %}
 {% block pagetitle %}Image Galleries - {{ the_group.group_name }}{% endblock %}
 
 {% block content %}
