--- a/views/gallery/gallery_edit.html
+++ b/views/gallery/gallery_edit.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "gallery/base.html" %}
 {% block pagetitle %}Edit Image Gallery{% endblock %}
 
 {% block content %}
