--- a/views/gallery/image_delete.html
+++ b/views/gallery/image_delete.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "gallery/base.html" %}
 {% block pagetitle %}Delete Image{% endblock %}
 
 {% block content %}
