--- a/views/gallery/index.html
+++ b/views/gallery/index.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "gallery/base.html" %}
 {% block pagetitle %}Image Galleries{% endblock %}
 
 {% block content %}
