fixed reports link

--- a/views/base.html
+++ b/views/base.html
@@ -60,7 +60,7 @@
                 {% block sidebar_sidewide %}
                 <h2>Gus</h2>
                 <ul>
-                    <li><a href="https://github.com/arkenflame/gus">Reports</a></li>
+                    <li><a href="http://guspy.joranbeasley.com/reports/index.html">Reports</a></li>
                 </ul>
                 {% endblock %}
 
