--- a/views/base.html
+++ b/views/base.html
@@ -24,6 +24,7 @@
     <div class="topbar">
         {% block menu %}
             <a href="/gus_test/">Manage Groups and Users</a> | 
+            <a href="/groups/">My Groups</a> | 
             <a href="/calendar/">My Calendar</a> | 
             <a href="/email/">My Messages</a> | 
             <a href="/bill/">My Bills</a> | 
