--- a/views/test/welcome.html
+++ b/views/test/welcome.html
@@ -6,7 +6,7 @@
 	{% for grp in groups %}
 	<div>{{grp}}<a href="/gus_test/Group/Delete/{{grp.id}}/">Delete</a>
 	 | <a href="/groups/{{grp.id}}/Edit/">Edit</a>
-	 | <a href="/gus_test/Group/View/{{grp.id}}/">View</a>
+	 | <a href="/groups/View/{{grp.id}}/">View</a>
 	</div>
 	{% endfor %}
 </div>
