--- a/views/groups/viewGroup.html
+++ b/views/groups/viewGroup.html
@@ -32,8 +32,8 @@
 )
 <br/>
 <div style="margin-left:25px">
-<a href="/groups/{{group.id}}/EditRole/{{user.id}}/">Change User Role</a>
- | <a href="/groups/{{group.id}}/RemoveUser/{{user.id}}/">Delete User</a>
+<a href="/groups/{{group.id}}/EditRole/{{usr.id}}/">Change User Role</a>
+ | <a href="/groups/{{group.id}}/RemoveUser/{{usr.id}}/">Delete User</a>
 </div>
 
 {% endfor %}
