--- a/views/test/form.html
+++ b/views/test/form.html
@@ -7,5 +7,5 @@
 {{ form.as_p }}
 <input type="submit" value="{{ btnlabel }}">
 </form>
-<a href="/gus_test/">Cancel</a><br/>
+<a href="/">Cancel</a><br/>
 {% endblock %}
