--- a/views/news/upload.html
+++ b/views/news/upload.html
@@ -2,10 +2,10 @@
 {% block content %}
 <h4>Upload News Item</h4>
 
-<form action="/news/edit" method="POST">
+<form action="." method="POST">
 {% csrf_token %}
-{{News_form.as_p}}
-<input type="submit" value="save">
+{{form.as_p}}
+<input type="submit" value="Save">
 </form>
 
 {% endblock content %}
