--- a/views/base.html
+++ b/views/base.html
@@ -4,6 +4,8 @@
 		<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 		<title>{% block pagetitle %}Gus{% endblock %}</title>
 		<link rel="stylesheet" type="text/css" href="/include/css/default.css" media="screen"/>
+		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script> 
+
 		{% block custom_header %}
 		{% endblock %}
 	</head>
