--- a/views/test/welcome2.html
+++ b/views/test/welcome2.html
@@ -10,7 +10,9 @@
 	 [ <a href="/groups/{{grp.id}}/Edit/">Edit</a> ]
 	 [ <a href="/groups/View/{{grp.id}}/">View</a> ]
 	 [ <a href="/gus_test/Group/Add">Add Subgroup</a> ]
+	 {% comment %}
 	 {% control user grp 'link_label' 'http://url' 'Can change user' %}
+	 {% endcomment %}
 	</div>
 	{% endfor %}
 </div>
