--- a/views/test/welcome2.html
+++ b/views/test/welcome2.html
@@ -6,7 +6,7 @@
 <h3>Groups </h3>
 	{% for g in groups %}
 	
-	<div>{{g.group}}
+	<div>{{g.group.group_name}}
 	 [ <a href="/groups/View/{{g.group.id}}/">View</a> ]
 	 {% if g.candeletegroup %}
 	 [ <a href="/gus_test/Group/Delete/{{g.group.id}}/">Delete</a> ]
