Check for logged-in before displaying forms/news. Added news to navigation.

--- a/views/base.html
+++ b/views/base.html
@@ -31,7 +31,8 @@
             <a href="/calendar/">My Calendar</a> | 
             <a href="/email/">My Messages</a> | 
             <a href="/bill/">My Bills</a> | 
-            <a href="/gallery/">My Galleries</a>
+            <a href="/gallery/">My Galleries</a> |
+			<a href="/news/_all/">My News</a>
         {% endblock %}
     </div>
 
