--- a/views/test/welcome.html
+++ b/views/test/welcome.html
@@ -6,7 +6,7 @@
 	{% for grp in groups %}
 	<div>{{grp}}
 	 
-	 [ <a href="/groups/View/{{grp.id}}/">View</a> ]
+	 [ <a href="/groups/{{grp.id}}/">View</a> ]
 	</div>
 	{% endfor %}
 </div>
